finalização do projeto

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,5 @@ stripe
 # --- Utilidades ---
 gunicorn             # Servidor de produção (para mais tarde)
 psycopg2-binary
-
 cloudinary
+xhtml2pdf
